# unfold

./: LICENSE  implementation.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.3/: package.cache  regularity-0.1.0.0-inplace-test.conf  regularity-0.1.0.0-inplace.conf
src/: Regularity.hs  Unfold.hs
test/: Test.hs
